--- a/package.json
+++ b/package.json
@@ -1,8 +1,34 @@
 {
     "name": "hexcellent",
     "version": "0.0.1.0",
+    "engines": {
+        "vscode": "^1.22.0"
+    },
     "scripts": {
-        "package":"",
+        "package": "",
         "build": ""
+    },
+    "description": "A VSCode programmer calculator extension",
+    "main": "build/main.js",
+    "repository": "git@github.com:smartchain-llc/Hexcellent.git",
+    "author": "Robert Strickland <strickland.rbls@gmail.com>",
+    "license": "MIT",
+    "devDependencies": {
+        "@types/node": "^22.13.10",
+        "@types/vscode": "^1.98.0",
+        "create": "^0.5.4",
+        "create-vite": "^6.3.1",
+        "svelte": "^5.23.0",
+        "typescript": "^5.8.2",
+        "vite": "^6.2.1"
+    },
+    "activationEvents": [],
+    "contributes": {
+        "commands": [
+            {
+                "command": "hexcellent.stub",
+                "title": "Hexcellent Stub"
+            }
+        ]
     }
 }
