got custom side panel webview working.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,9 @@
 		"module": "commonjs",
 		"moduleResolution": "Node10",
 		"target": "es6",
+		"paths": {
+			"*": ["*"]
+		},
 		"outDir": "build",
 		"lib": [
 			"es6",
