--- a/package.json
+++ b/package.json
@@ -1,34 +1,61 @@
 {
     "name": "hexcellent",
-    "version": "0.0.1.0",
+    "version": "0.0.1",
     "engines": {
         "vscode": "^1.22.0"
     },
+    "type": "commonjs",
     "scripts": {
         "package": "",
-        "build": ""
+        "build:ext": "vite build && yarn build:ui",
+        "build:ui": "cd ui && vite --config ./vite.config.ts build",
+        "clean:ext": "rm -rf build dist"
     },
     "description": "A VSCode programmer calculator extension",
-    "main": "build/main.js",
+    "main": "dist/extension.js",
     "repository": "git@github.com:smartchain-llc/Hexcellent.git",
-    "author": "Robert Strickland <strickland.rbls@gmail.com>",
+    "author": "Robert Strickland <rstrickland@apache.org>",
     "license": "MIT",
     "devDependencies": {
         "@types/node": "^22.13.10",
         "@types/vscode": "^1.98.0",
         "create": "^0.5.4",
         "create-vite": "^6.3.1",
+        "fs": "^0.0.1-security",
+        "prettier": "^3.5.3",
         "svelte": "^5.23.0",
         "typescript": "^5.8.2",
-        "vite": "^6.2.1"
+        "vite": "^6.2.1",
+        "vite-tsconfig-paths": "^5.1.4"
     },
     "activationEvents": [],
     "contributes": {
         "commands": [
             {
-                "command": "hexcellent.stub",
-                "title": "Hexcellent Stub"
+                "command": "hexcellent.new",
+                "title": "Hexcellent: New Calculator"
             }
-        ]
-    }
+        ],
+        "viewsContainers": {
+            "activitybar": [
+                {
+                    "id": "hexcellent",
+                    "title": "Hexcellent",
+                    "icon": "public/icon.png"
+                }
+            ]
+        },
+        "views": {
+            "hexcellent": [
+                {
+                    "id": "hexcellent",
+                    "name": "Hexcellent",
+                    "icon": "public/icon.png",
+                    "contextualTitle": "Hexcellent",
+                    "type": "webview"
+                }
+            ]
+        }
+    },
+    "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
