--- a/ui/package.json
+++ b/ui/package.json
@@ -14,6 +14,7 @@
     "@tsconfig/svelte": "^5.0.4",
     "@types/node": "^22.13.10",
     "@types/vscode": "^1.98.0",
+    "prettier": "^3.5.3",
     "svelte": "^5.20.2",
     "svelte-check": "^4.1.4",
     "typescript": "~5.7.2",
